# simpulse

./: .gitignore  README.md  dynspec.py  pyproject.toml
src/simpulse/: __init__.py  simperiod_cli.py  simpulse_cli.py
src/simpulse/io/: __init__.py  fbio.py  sigproc.py
src/simpulse/pifa/: pifa.py
src/simpulse/sim/: __init__.py  burst.py  measurment.py  model.py  noise.py
tests/: import_tests.py
