[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simpulse"
version = "0.1.0"
description = "A library for generating and/or injecting single or period pulses into a filterbank."
authors = [
    { name="Owen A. Johnson", email="ojohnson@tcd.ie" },
    { name="Harry Qiu", email="hao.qiu@skao.int" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["astronomy", "pulsar", "fast radio burst", "signal processing"]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.scripts]
simpulse = "simpulse.simpulse_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
